--- a/views/styles.css
+++ b/views/styles.css
@@ -36,6 +36,7 @@ body {
   margin-bottom: 8px;
 }
 
-.checkbox-container input[type="checkbox"] {
+.checkbox-container input[type="checkbox"],
+.checkbox-container input[type="radio"] {
   margin-right: 6px;
 }
