just removed some bugs

--- a/views/index.view.twig
+++ b/views/index.view.twig
@@ -166,7 +166,7 @@
 	</form>
 
 	<form>
-		<button name="save-changes" type="submit">Änderungen speichern</button>
+		<button type="submit" name="save-changes">Änderungen speichern</button>
 	</form>
 
 
