--- a/views/styles.css
+++ b/views/styles.css
@@ -20,14 +20,15 @@ body {
 }
 
 .task-column {
-  flex: 1;
+  flex: 1 1 0;
 }
 
 .checkbox-container {
   background: #f0f0f0;
   padding: 15px;
   border-radius: 5px;
-  max-width: 300px; /* optional: begrenzt die Box-Breite */
+  max-width: 250px; /* optional: begrenzt die Box-Breite */
+  min-width: 250px;
   color: #000;
 }
 
